[gd_scene load_steps=10 format=2]

[ext_resource path="res://game assets 2/building.png" type="Texture" id=1]
[ext_resource path="res://game assets 2/library.png" type="Texture" id=2]
[ext_resource path="res://game assets 2/solo map.png" type="Texture" id=3]
[ext_resource path="res://game assets 2/dorms.png" type="Texture" id=4]
[ext_resource path="res://game assets 2/dining hall and co.png" type="Texture" id=5]
[ext_resource path="res://game assets 2/dorms_bitmap_pls.bmp" type="BitMap" id=6]
[ext_resource path="res://Map.gd" type="Script" id=7]
[ext_resource path="res://game assets 2/dining hall mask.png" type="BitMap" id=8]
[ext_resource path="res://game assets 2/library mask.png" type="BitMap" id=9]

[node name="Map" type="Control"]
script = ExtResource( 7 )

[node name="MapTexture" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="DormButton" type="TextureButton" parent="MapTexture"]
margin_left = 23.0
margin_top = 28.0
margin_right = 260.0
margin_bottom = 239.0
texture_normal = ExtResource( 4 )
texture_click_mask = ExtResource( 6 )

[node name="LibraryButton" type="TextureButton" parent="MapTexture"]
margin_left = 64.0
margin_top = 334.0
margin_right = 244.0
margin_bottom = 547.0
texture_normal = ExtResource( 2 )
texture_click_mask = ExtResource( 9 )

[node name="DiningHallButton" type="TextureButton" parent="MapTexture"]
margin_left = 325.0
margin_top = 110.0
margin_right = 941.0
margin_bottom = 537.0
texture_normal = ExtResource( 5 )
texture_click_mask = ExtResource( 8 )

[node name="BuildingButton" type="TextureButton" parent="MapTexture"]
margin_left = 346.0
margin_top = 37.0
margin_right = 494.0
margin_bottom = 338.0
texture_normal = ExtResource( 1 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 237.0
margin_top = 149.0
margin_right = 719.0
margin_bottom = 354.0
rect_min_size = Vector2( 400, 140 )
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="MapTexture/DormButton" to="." method="_on_DormButton_pressed"]
[connection signal="pressed" from="MapTexture/LibraryButton" to="." method="_on_LibraryButton_pressed"]
[connection signal="pressed" from="MapTexture/DiningHallButton" to="." method="_on_DiningHallButton_pressed"]
[connection signal="pressed" from="MapTexture/BuildingButton" to="." method="_on_BuildingButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
